--- a/gradle.properties
+++ b/gradle.properties
@@ -9,11 +9,11 @@ yarn_mappings=1.21.3+build.2
 loader_version=0.16.7
 
 # Mod Properties
-mod_version=1.0.15-1.20.5-1.21.3
-maven_group=banduty.bsdfwmi
-archives_base_name=bsdfwmi
+mod_version=1.1-1.20.5-1.21.3
+maven_group=banduty.ticktweaks
+archives_base_name=ticktweaks
 
 # Dependencies
 fabric_version=0.106.1+1.21.3
 cloth_config=15.0.127
-modmenu=11.0.0-rc.4
+modmenu=12.0.0-beta.1
