--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.21.3+build.2
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=1.1.0-1.20.5-1.21.3
+mod_version=1.1.1-1.20.5-1.21.3
 maven_group=banduty.ticktweaks
 archives_base_name=ticktweaks
 
@@ -17,3 +17,4 @@ archives_base_name=ticktweaks
 fabric_version=0.106.1+1.21.3
 cloth_config=16.0.141
 modmenu=12.0.0-beta.1
+streq_version=5941333
