--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ pluginManagement {
 		gradlePluginPortal()
 	}
 }
+
+include ':streq'
+project(':streq').projectDir = new File("C:\\Users\\regan\\OneDrive\\Escritorio\\Banduty's Mods\\streq-mod\\common")
