--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
 	modApi "com.terraformersmc:modmenu:${project.modmenu}"
 
-	modImplementation project(':streq')
+	include modImplementation(project(':streq'))
 	
 }
 
