--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,16 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
+minecraft_version=1.21.1
+yarn_mappings=1.21.1+build.3
 loader_version=0.16.10
 
 # Mod Properties
-mod_version=1.2.0-1.20.5-1.21.5
+mod_version=1.2.1-1.20.5-1.21.5
 maven_group=banduty.ticktweaks
 archives_base_name=ticktweaks-fabric
 
 # Dependencies
-fabric_version=0.119.6+1.21.5
-cloth_config=18.0.145
-modmenu=14.0.0-rc.2
+fabric_version=0.115.4+1.21.1
+cloth_config=15.0.140
+modmenu=11.0.3
