--- a/gradle.properties
+++ b/gradle.properties
@@ -4,16 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
+minecraft_version=[VERSIONED]
+minecraft_version_range=[VERSIONED]
+yarn_mappings=[VERSIONED]
 loader_version=0.16.10
 
 # Mod Properties
-mod_version=1.2.2-1.20.5-1.21.5
+mod_version=1.2.3
 maven_group=banduty.ticktweaks
 archives_base_name=ticktweaks-fabric
 
 # Dependencies
-fabric_version=0.115.4+1.21.1
-cloth_config=15.0.140
-modmenu=11.0.3
+fabric_version=[VERSIONED]
+cloth_config=[VERSIONED]
+modmenu=[VERSIONED]
