--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,22 @@ pluginManagement {
 		}
 		mavenCentral()
 		gradlePluginPortal()
+		maven { url = "https://maven.kikugie.dev/releases" }
+		maven { url = "https://maven.kikugie.dev/snapshots" }
+	}
+}
+
+plugins {
+	id "dev.kikugie.stonecutter" version "0.6-beta.2"
+}
+
+stonecutter {
+	kotlinController = false
+	centralScript = "build.gradle"
+
+	create(getRootProject()) {
+		versions "1.20.1", "1.20.4", "1.21.1"
+		vcsVersion = "1.21.1"
 	}
 }
 
