--- a/versions/1.20.1/gradle.properties
+++ b/versions/1.20.1/gradle.properties
@@ -1,5 +1,5 @@
 minecraft_version=1.20.1
-minecraft_version_range=[1.19.3, 1.20.2]
+minecraft_version_range=>=1.19.3 <=1.20.2
 yarn_mappings=1.20.1+build.10
 
 # Dependencies
