--- a/versions/1.20.4/gradle.properties
+++ b/versions/1.20.4/gradle.properties
@@ -1,5 +1,5 @@
 minecraft_version=1.20.4
-minecraft_version_range=[1.20.3, 1.20.4]
+minecraft_version_range=>=1.20.3 <=1.20.4
 yarn_mappings=1.20.4+build.3
 
 # Dependencies
