--- a/versions/1.21.1/gradle.properties
+++ b/versions/1.21.1/gradle.properties
@@ -1,5 +1,5 @@
 minecraft_version=1.21.1
-minecraft_version_range=[1.20.5, 1.21.4]
+minecraft_version_range=>=1.20.5 <=1.21.4
 yarn_mappings=1.21.1+build.3
 loader_version=0.16.10
 
