--- a/settings.gradle
+++ b/settings.gradle
@@ -20,7 +20,7 @@ stonecutter {
 	centralScript = "build.gradle"
 
 	create(getRootProject()) {
-		versions "1.20.1", "1.20.4", "1.21.1"
+		versions "1.20.1", "1.20.4", "1.21.1", "1.21.5"
 		vcsVersion = "1.21.1"
 	}
 }
